Firewall/kubernetes/Exercise5 - Secure AKS/winterready-ingress-web2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: winterready
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aksazfw.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: imageclassifierweb
          servicePort: 80
  - host: aksaz.internal.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: imageclassifierweb
          servicePort: 80
